bugfix footer z-index

--- a/pruebas/01-reading-list/Ailin-Glez/src/Footer.css
+++ b/pruebas/01-reading-list/Ailin-Glez/src/Footer.css
@@ -1,4 +1,5 @@
 .footer {
+  z-index: 2;
   position: fixed;
   padding: 0 5rem;
   bottom: 0;
